Move Sign In and Signup buttons to breadcrumb navigation below header toolbar, next to Home with same font and style

--- a/index.html
+++ b/index.html
@@ -1470,9 +1470,6 @@
                     <span></span>
                 </button>
                 <div class="nav-links">
-                    <a href="index.html" class="nav-link">Home</a>
-                    <a href="login.html" class="nav-link">Sign In</a>
-                    <a href="signup.html" class="nav-link">Signup</a>
                     <div class="dropdown">
                         <a href="#">Convert to PDF <i class="fas fa-chevron-down"></i></a>
                         <div class="dropdown-content">
@@ -1653,6 +1650,10 @@
         <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
             <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
                 <li style="color: #56607a; font-weight: 500;">Home</li>
+                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
+                <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;">Sign In</a></li>
+                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
+                <li><a href="signup.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;">Signup</a></li>
             </ol>
         </div>
     </nav>
