SEO & AdSense: Optimize both PDF editor pages with high-volume keywords, update H1/H2 tags, enhance schema markup, add meta tags for better search visibility

--- a/edit-pdf-preview.html
+++ b/edit-pdf-preview.html
@@ -4,9 +4,20 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>PDF Editor - Advanced PDF Editing | easyjpgtopdf</title>
-    <meta name="description" content="Advanced PDF editor with real-time editing, full A4 preview, text editing, image insertion, and professional editing tools.">
-    <meta name="keywords" content="pdf editor, edit pdf, edit pdf online, pdf editing tool, modify pdf, free pdf editor, advanced pdf editor">
+<title>Advanced PDF Editor Online - Edit PDF Files with Real-Time Preview | easyjpgtopdf</title>
+    <meta name="description" content="Advanced PDF editor online with real-time editing, full A4 preview, text editing, image insertion, OCR, and professional editing tools. Edit PDF files online free without installation.">
+    <meta name="keywords" content="advanced pdf editor online, pdf editor online free, edit pdf online, free pdf editor, online pdf editor, edit pdf files online, pdf editor tool, edit pdf documents, pdf editor software, edit pdf text, pdf editor free online, best pdf editor online, edit pdf online free no download, pdf editor website, edit pdf online tool, free online pdf editor, real-time pdf editor">
+    <meta name="author" content="Riyaz Mohammad">
+    <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
+    <link rel="canonical" href="https://easyjpgtopdf.com/edit-pdf-preview.html">
+    <meta property="og:title" content="Advanced PDF Editor Online - Edit PDF Files with Real-Time Preview">
+    <meta property="og:description" content="Advanced PDF editor online with real-time editing, full A4 preview, text editing, image insertion, OCR, and professional editing tools.">
+    <meta property="og:url" content="https://easyjpgtopdf.com/edit-pdf-preview.html">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://easyjpgtopdf.com/images/pdf-editor-preview-og.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Advanced PDF Editor Online - Edit PDF Files with Real-Time Preview">
+    <meta name="twitter:description" content="Advanced PDF editor online with real-time editing, full A4 preview, text editing, image insertion, OCR, and professional editing tools.">
 <link href="css/footer.css" rel="stylesheet"/>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&amp;family=Roboto:wght@400;700&amp;family=Open+Sans:wght@400;700&amp;family=Lato:wght@400;700&amp;family=Poppins:wght@400;700&amp;family=Montserrat:wght@400;700&amp;family=Source+Sans+3:wght@400;700&amp;family=Noto+Sans:wght@400;700&amp;family=Merriweather:wght@400;700&amp;family=PT+Sans:wght@400;700&amp;family=PT+Serif:wght@400;700&amp;display=swap" rel="stylesheet"/>
@@ -340,8 +351,8 @@
 
 <div class="container page-wrap">
 <div class="editor-header">
-<h1>PDF Editor - Advanced PDF Editing</h1>
-<p>Edit your PDF with professional tools - real-time editing, full A4 preview, and advanced features</p>
+<h1>Advanced PDF Editor Online Free - Edit PDF Files with Real-Time Preview</h1>
+<p>Edit PDF files online for free with our advanced PDF editor tool. Real-time editing, full A4 preview, text editing, image insertion, OCR support, and professional editing tools - all without software installation. Best free online PDF editor 2024.</p>
 </div>
 <div class="editor-card">
 <div class="file-info" id="file-info" style="display: block;">
@@ -1365,7 +1376,7 @@
     <section class="how-to-guide" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-book-open" style="margin-right: 10px;"></i>
-            How to Use PDF Editor
+            How to Use Advanced PDF Editor Online - Edit PDF Files Online Free
         </h2>
         <div class="steps-container" style="max-width: 800px; margin: 0 auto;">
             <ol style="list-style: none; padding: 0; counter-reset: step-counter;">
@@ -1423,7 +1434,7 @@
     <section class="related-tools" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-tools" style="margin-right: 10px;"></i>
-            Related Tools
+            Related PDF Tools - Edit, Convert, and Manage PDF Files Online
         </h2>
         <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
 
