--- a/edit-pdf.html
+++ b/edit-pdf.html
@@ -340,8 +340,8 @@
 
 <div class="container page-wrap">
 <div class="editor-header">
-<h1>PDF Editor - Edit PDF Documents Online Free</h1>
-<p>Edit text directly on your PDF - add, modify, change fonts, highlight and more</p>
+<h1>PDF Editor Online Free - Edit PDF Files Online Without Installation</h1>
+<p>Edit PDF files online for free with our advanced PDF editor tool. Add text, images, annotations, highlight content, modify PDF documents, and more - all without software installation. Best free online PDF editor 2024.</p>
 </div>
 <div class="editor-card">
 <div aria-label="Upload your PDF" class="upload-area" id="upload-area" role="button" tabindex="0">
@@ -1122,7 +1122,7 @@
     <section class="how-to-guide" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-book-open" style="margin-right: 10px;"></i>
-            How to Use PDF Editor
+            How to Use Free PDF Editor Online - Edit PDF Files Online Step by Step
         </h2>
         <div class="steps-container" style="max-width: 800px; margin: 0 auto;">
             <ol style="list-style: none; padding: 0; counter-reset: step-counter;">
@@ -1180,7 +1180,7 @@
     <section class="related-tools" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-tools" style="margin-right: 10px;"></i>
-            Related Tools
+            Related PDF Tools - Edit, Convert, and Manage PDF Files Online
         </h2>
         <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
 
@@ -1211,7 +1211,7 @@
     <section class="faq-section" style="margin: 40px 0; padding: 40px; background: #f8f9ff; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-question-circle" style="margin-right: 10px;"></i>
-            Frequently Asked Questions
+            PDF Editor Online Free - Frequently Asked Questions
         </h2>
         <div class="faq-container" style="max-width: 800px; margin: 0 auto;">
 
