Fix: Update edit-pdf.html schema URL and improve index.html link description

--- a/index.html
+++ b/index.html
@@ -1783,8 +1783,8 @@
                     <div class="tool-icon">
                         <i class="fas fa-edit"></i>
                     </div>
-                    <h3>Pdf Editor</h3>
-                    <p>Edit text and images in your PDF files.</p>
+                    <h3>Edit PDF</h3>
+                    <p>Edit text, images, annotations, and modify PDF documents online for free.</p>
                 </div>
 
                 <!-- More Tools -->
