Fix: Remove duplicate headers - use global-header-placeholder instead of header-placeholder, remove manual header loading scripts

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -469,16 +469,7 @@
 </head>
 <body>
     <script src="js/global-components.js"></script>
-    <script>
-        // Load header dynamically
-        document.addEventListener('DOMContentLoaded', function() {
-            const headerPlaceholder = document.getElementById('header-placeholder');
-            if (headerPlaceholder && typeof globalHeaderHTML !== 'undefined') {
-                headerPlaceholder.innerHTML = globalHeaderHTML;
-            }
-        });
-    </script>
-    <div id="header-placeholder"></div>
+    <div id="global-header-placeholder"></div>
     
     <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
         <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
