Fix: Add missing imageWidthInput and imageHeightInput variable declarations

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -1183,6 +1183,8 @@
         const fontSizeInput = document.getElementById('font-size-input');
         const fontFamilySelect = document.getElementById('font-family-select');
         const textColorInput = document.getElementById('text-color-input');
+        const imageWidthInput = document.getElementById('image-width-input');
+        const imageHeightInput = document.getElementById('image-height-input');
         
         // Additional DOM elements with null checks
         const imageScaleValue = document.getElementById('image-scale-value'); // For future image scale feature
