Fix syntax error - add missing closing bracket for main IIFE

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -3107,7 +3107,8 @@
                 // DOM already loaded, start immediately
                 init();
             }
-        })();
+        })(); // Close initPDFEditor IIFE
+        })(); // Close main IIFE
     </script>
 </body>
 </html>
