Add Google Cloud services permanent startup and OCR page tracking - Google Cloud services auto-start on server launch - OCR text page tracking fixed - Complete service status monitoring

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -2285,6 +2285,7 @@
                             textElement.textContent = block.text;
                             textElement.dataset.ocrBlock = 'true';
                             textElement.dataset.blockIndex = blockIndex;
+                            textElement.dataset.page = (currentPage - 1).toString(); // Track page number
                             
                             // Position relative to PDF canvas
                             textElement.style.position = 'absolute';
