Complete: All edit operations now use reloadPDF, comprehensive error handling added

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -1475,6 +1475,10 @@
                 console.error('Error applying OCR texts:', error);
                 showError('Failed to embed OCR text: ' + error.message);
             }
+            } catch (error) {
+                console.error('Error applying OCR texts:', error);
+                showError('Failed to embed OCR text: ' + error.message);
+            }
         }
         
         // Apply native text edit (NO HTML overlays - direct PDF editing)
