Add Collaboration and Add Page buttons to UI

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -870,6 +870,18 @@
                     </div>
                     
                     <div class="tool-group">
+                        <div class="tool-group-title">Collaboration</div>
+                        <div class="tool-item" id="collaboration-btn" title="Real-time Collaboration">
+                            <i class="fas fa-users"></i>
+                            <span>Share</span>
+                        </div>
+                        <div class="tool-item" id="add-page-btn" title="Add New Page">
+                            <i class="fas fa-plus-square"></i>
+                            <span>Add Page</span>
+                        </div>
+                    </div>
+                    
+                    <div class="tool-group">
                         <div class="tool-group-title">Tools</div>
                         <div class="tool-item" id="compress-btn" title="Compress PDF">
                             <i class="fas fa-compress"></i>
