Remove remaining overlay CSS - all editing uses backend now

--- a/pdf-editor-preview.html
+++ b/pdf-editor-preview.html
@@ -426,11 +426,8 @@
                 font-size: 14px;
             }
             
-            .editable-text {
-                min-height: 24px;
-                min-width: 30px;
-                padding: 4px 6px;
-            }
+            /* Removed .editable-text styles - no longer using DOM overlays */
+            /* All text editing now uses backend /api/pdf/edit-text endpoint */
         }
         
         /* Touch Gesture Support */
