Remove third-party references - Replace Google Cloud/Tesseract/Adobe references with generic terms - Update OCR service messages - Keep functionality intact - Progress: 30% complete

--- a/edit-pdf.html
+++ b/edit-pdf.html
@@ -507,7 +507,7 @@
                             <i class="fas fa-edit"></i>
                         </div>
                         <h3>Edit Every Word</h3>
-                        <p>Click on any text in your PDF to edit it directly. Every word is fully editable with real-time preview, just like Adobe Acrobat Pro.</p>
+                        <p>Click on any text in your PDF to edit it directly. Every word is fully editable with real-time preview, professional-grade editing experience.</p>
                     </div>
                     <div class="roadmap-card">
                         <div class="roadmap-icon">
@@ -555,14 +555,14 @@
                             <i class="fas fa-bolt"></i>
                         </div>
                         <h3>Fast Processing</h3>
-                        <p>Powered by Google Cloud infrastructure for lightning-fast editing and OCR processing with 100% accuracy.</p>
+                        <p>Powered by advanced infrastructure for lightning-fast editing and OCR processing with high accuracy.</p>
                     </div>
                     <div class="roadmap-card">
                         <div class="roadmap-icon">
                             <i class="fas fa-language"></i>
                         </div>
                         <h3>Multi-Language OCR</h3>
-                        <p>Extract text from scanned PDFs in multiple languages using advanced Google Cloud Vision API OCR technology.</p>
+                        <p>Extract text from scanned PDFs in multiple languages using advanced OCR technology.</p>
                     </div>
                     <div class="roadmap-card">
                         <div class="roadmap-icon">
