Add Desktop App, Mobile App, and API Access to all plans. Update Image Remover details in pricing page. Ensure all plans are properly integrated and working.

--- a/pricing.html
+++ b/pricing.html
@@ -396,12 +396,15 @@
             <li>Digital signature capabilities</li>
             <li>Automated workflows</li>
             <li>Ad-free experience</li>
-            <li>Desktop and mobile applications</li>
+            <li><strong>Desktop application</strong> (full access with premium features)</li>
+            <li><strong>Mobile application</strong> (full access with premium features)</li>
+            <li><strong>API access</strong> (unlimited calls - Google Vision API powered)</li>
             <li>Cloud storage integration</li>
             <li>Batch processing support</li>
             <li>Priority customer support</li>
             <li>Email invoicing</li>
             <li>Advanced OCR technology</li>
+            <li><strong>Image Background Remover:</strong> Unlimited images, max 50 MB per image</li>
           </ul>
           <div class="actions">
             <button class="btn btn-primary" data-plan="premium" data-billing="monthly">Get Started — $5/month</button>
@@ -422,13 +425,16 @@
             <li>Dedicated account manager</li>
             <li>Single Sign-On (SSO) integration</li>
             <li>Regional file processing</li>
-            <li>API access for automation</li>
+            <li><strong>API access</strong> (unlimited - Google Vision API powered)</li>
+            <li><strong>Desktop application</strong> (enterprise features & custom branding)</li>
+            <li><strong>Mobile application</strong> (enterprise features & custom branding)</li>
             <li>Custom integrations</li>
             <li>Team management tools</li>
             <li>Usage analytics dashboard</li>
             <li>Enhanced security features</li>
             <li>Priority technical support</li>
             <li>Custom SLA agreements</li>
+            <li><strong>Image Background Remover:</strong> Unlimited images, no size limit</li>
           </ul>
           <div class="actions">
             <button class="btn btn-primary" data-plan="business" data-billing="monthly" onclick="window.location.href='#contact'">Contact Sales</button>
