Fix Free plan details in pricing page to match updated features

--- a/pricing.html
+++ b/pricing.html
@@ -371,13 +371,19 @@
         <div class="plan">
           <h3>Free</h3>
           <div class="price">$0<span>/month</span></div>
-          <p>Perfect for occasional use</p>
+          <p>Essential tools for basic needs</p>
           <ul>
-            <li>Upload/Download up to 6 MB per file</li>
-            <li>Background remover: 1 MB quota</li>
-            <li>5 GB total transfer cap</li>
-            <li>Basic support</li>
-            <li>All essential tools</li>
+            <li>Up to 50 MB per file</li>
+            <li>3 operations per day</li>
+            <li>100 MB total storage</li>
+            <li>Access to core PDF tools</li>
+            <li>Standard processing speed</li>
+            <li>Community support</li>
+            <li>Web-based interface</li>
+            <li><strong>Desktop application</strong> (full access)</li>
+            <li><strong>Mobile application</strong> (full access)</li>
+            <li><strong>API access</strong> (100 calls/month)</li>
+            <li><strong>Image Background Remover:</strong> 10 images/month, max 5 MB per image</li>
           </ul>
           <div class="actions">
             <a href="signup.html" class="btn btn-outline">Get Started Free</a>
